--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -5,7 +5,14 @@ The following bugs were fixed:
 012125 Update SDL viewer, after refactoring of last files
 012124 Add command line interface(s) unittest
 012120 Update to libtorrent 0.13 aka SVN.
+012118 Add session naming.
+012108 btgui: buttons OK and Cancel are equivalent when logging-in.
+012106 Can't set files to download in btgui.
 012055 File checking fails on torrents that contain directories.
+012004 Show tracker for each context.
+011784 More users can't download same torrent at same time.
+011781 FBSD, btgncli does not show the status bar.
+011557 Peer_id sent to tracker (feature req).
 
 BTG version 0.9.6
 -----------------
