--- a/trunk/UI/gui/btgui.man
+++ b/trunk/UI/gui/btgui.man
@@ -102,7 +102,7 @@ See btg_config(1).
 Written by Michael Wojciechowski.
 
 .SH "SEE ALSO"
-btg(5), btg_config(5), btcli(1), btgdaemon(1), btgd(1)
+btg(5), btg_config(5), btcli(1), btgdaemon(1)
 
 .SH BUGS
 No known bugs.
