--- a/trunk/daemon/btgdaemon.man
+++ b/trunk/daemon/btgdaemon.man
@@ -67,7 +67,7 @@ No config files are used by the daemon.
 Written by Michael Wojciechowski.
 
 .SH "SEE ALSO"
-btg(5), btg_config(5), btgcallback(5), btgcli(1), btgui(1), btgd(1)
+btg(5), btg_config(5), btgcallback(5), btgcli(1), btgui(1)
 
 .SH BUGS
 No known bugs.
