--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,7 +1,7 @@
 BTG version 0.9.7
 -----------------
 The following bugs were fixed:
-
+012839 DHT + encryption support in wwwbtg.
 012814 Daemon segfaults when starting client with DHT (0.9.6).
 012784 Remove singleton object used for logging.
 012771 Add openwrt packages to SVN.
