--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,9 @@
+BTG version 0.9.8
+-----------------
+The following bugs were fixed:
+
+013307 btgui, no error message on incorrect login (also btgcli/ncli)
+
 BTG version 0.9.7
 -----------------
 The following bugs were fixed:
