--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,10 +2,11 @@ BTG version 0.9.8
 -----------------
 The following bugs were fixed:
 
-013436 btgui, resizable headers
-013450 Logging optimization - static conditions
-013434 Log messsages loss when logging not initialized
-013433 Configuration file search paths
+013450 Logging optimization - static conditions.
+013436 btgui, resizable headers.
+013434 Log messsages loss when logging not initialized.
+013433 Configuration file search paths.
+013411 BTGWWW, load a torrent from an URL.
 013399 Merge Miklos Vajna's GCC 4.3 patch.
 013381 URL loading in daemon and non-www clients.
 013307 btgui, no error message on incorrect login (also btgcli/ncli).
