--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,6 +2,8 @@ BTG version 0.9.8
 -----------------
 The following bugs were fixed:
 
+013454 Writing PID-file (daemon)
+013435 Open all necessary files before switching EUID (daemon)
 013450 Logging optimization - static conditions.
 013436 btgui, resizable headers.
 013434 Log messsages loss when logging not initialized.
