--- a/trunk/debian/changelog
+++ b/trunk/debian/changelog
@@ -1,3 +1,61 @@
+btg (0.9.7) stable; urgency=low
+
+  * The following bugs were fixed:
+    013359 Compilation error: numinput.h.
+    013315 btgui, torrent remains after moving to another session.
+    013306 btgui, executing operations on multiple torrents.
+    013272 Add support for libtorrent 0.12.1.
+    013267 btgcli, incorrect seed limit.
+    013266 btgui, global limit setting.
+    013265 btgui, limit settings dialog doesn't correctly display limits.
+    013248 btgncli, add dialog used for entering numbers.
+    013216 Session saving, add saving of global limits.
+    013147 Handle octets set to 255 in Address/addressPort.
+    013146 XML Pasing error (wwwui).
+    013142 Restore file priorities after restart.
+    013136 Change of peer id / useragent (feature req).
+    013007 Show session settings.
+    012997 Session saving, fix saving of dht/encryption settings.
+    012975 Externalization, simple, exorcism.
+    012970 Add moving torrents to another sessions.
+    012952 Add switch to disable generating btg-config.
+    012839 DHT + encryption support in wwwbtg.
+    012814 Daemon segfaults when starting client with DHT (0.9.6).
+    012784 Remove singleton object used for logging.
+    012771 Add openwrt packages to SVN.
+    012762 Embed svn version into release information.
+    012761 Callback manager: execute calls from a thread.
+    012685 btgdaemon/btgpassswd segfaulting upon start.
+    012676 Fix boost iostreams detection.
+    012616 Remove btgq and btgd.
+    012598 Write man page for btgvs.
+    012557 Make fails on FreeBSD 6.2.
+    012545 Update SDL viewer to AGAR 1.3.1.
+    012544 BTGWWW, add missing files in bcore/command.
+    012535 btgncli: show peers/seeds in the list of torrents.
+    012330 Add another version of contextStatusCommand.
+    012329 Add "stop autoupdating" button in wwwbtg.
+    012308 Clean up daemon/limitval.cpp.
+    012301 Update doxygen.
+    012241 Use pkglib_LTLIBRARIES instead of lib_LTLIBRARIES.
+    012226 btgui, files showing as 100%.
+    012208 Add logging using syslog to wwwui.
+    012205 torrent files which contain same files but different tracker.
+    012190 Fix "warning: 'add_torrent' is deprecated".
+    012125 Update SDL viewer, after refactoring of last files.
+    012124 Add command line interface(s) unittest.
+    012120 Update to libtorrent 0.13 aka SVN.
+    012118 Add session naming.
+    012108 btgui: buttons OK and Cancel are equivalent when logging-in.
+    012106 Can't set files to download in btgui.
+    012055 File checking fails on torrents that contain directories.
+    012004 Show tracker for each context.
+    011784 More users can't download same torrent at same time.
+    011781 FBSD, btgncli does not show the status bar.
+    011557 Peer_id sent to tracker (feature req).
+
+ -- Roman Rybalko <btg@romanr.info>  Sun, 16 Mar 2008 00:16:04 +0300
+
 btg (0.9.6-p1-1) unstable; urgency=low
 
   * New upstream release 
