--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -4,6 +4,7 @@ The following bugs were fixed:
 
 013557 UPnP, automatic internal IP detection.
 013555 UPnP, added separate config-file parameter for internal-ip.
+013538 Issues with native FreeBSD dialog.
 013501 Implement better torrent loading.
 013454 Writing PID-file (daemon).
 013435 Open all necessary files before switching EUID (daemon).
@@ -16,6 +17,7 @@ The following bugs were fixed:
 013399 Merge Miklos Vajna's GCC 4.3 patch.
 013381 URL loading in daemon and non-www clients.
 013307 btgui, no error message on incorrect login (also btgcli/ncli).
+013198 Unable to load huge torrent files.
 
 BTG version 0.9.7
 -----------------
