--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -6,6 +6,7 @@ The following bugs were fixed:
 013555 UPnP, added separate config-file parameter for internal-ip.
 013538 Issues with native FreeBSD dialog.
 013501 Implement better torrent loading.
+013460 Showing file pieces for torrents missing from wwwui.
 013454 Writing PID-file (daemon).
 013435 Open all necessary files before switching EUID (daemon).
 013450 Logging optimization - static conditions.
