--- a/trunk/debian/README
+++ b/trunk/debian/README
@@ -3,13 +3,12 @@ stable packages: btg-common_x.x.x, btg-cli-common_x.x.x, btg-cli_x.x.x, btg-gui_
 unstable packages: btg-common-x.x.x_XXXXsvn, btg-cli-common-x.x.x_XXXXsvn, btg-cli-x.x.x_XXXXsvn, btg-gui-x.x.x_XXXXsvn, btg-www-x.x.x_XXXXsvn, btg-daemon-x.x.x_XXXXsvn
 x.x.x - version
 XXXX - svn revision
-In unstable releases version becomes suffix and svn revision becomes version.
+For unstable releases version becomes suffix and svn revision becomes version.
 
 control.gen.sh - generates control file from control.in
 changelog.add.pl - parses ../ChangeLog and adds missing entries to changelog, stupid thing - review after
 debfiles.gen.sh - creates symlinks for *.install *.postinst, *.postrm, *.prerm, etc. files
 build.gen.sh - calls all above at once
+build.sh - builds packages and sources
 
 extra - contains extra installation files. Copyed to destdir after make install.
-
-see also ../build/deb.sh
