--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,6 +2,7 @@ BTG version 0.9.8
 -----------------
 The following bugs were fixed:
 
+013852 Use torrent-ip to create lt sessions.
 013701 Keys for "Quit" and "Back" should be separate.
 013700 Reload filter list w/o restarting daemon.
 013644 Ports opened by UPnP when it is disabled.
