--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -1,3 +1,17 @@
+BTG version 0.9.9
+-----------------
+The following bugs were fixed:
+
+014372 Building issue (at configure step).
+014371 Does not compile against boost 1.36.
+014353 btgncli doc doesn't say what key configuration does.
+014351 WAN annouce ip not used.
+014280 btgncli, add sorting by..
+014271 Typo in btg.js.
+014268 Update Freebsd notes in howto.
+014223 libsigc++-2.2.* is not supported.
+011275 Use UPnP support from libtorrent.
+
 BTG version 0.9.8
 -----------------
 The following bugs were fixed:
