--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,6 +2,8 @@ BTG version 0.9.9
 -----------------
 The following bugs were fixed:
 
+014794 Regression: short_open_tag=off.
+014792 Popup warning when adding a URL to download.
 014583 Possibility to allocate files.
 014407 Show limits ranges in geometrical progression.
 014372 Building issue (at configure step).
@@ -15,6 +17,7 @@ The following bugs were fixed:
 014268 Update Freebsd notes in howto.
 014223 libsigc++-2.2.* is not supported.
 013963 btgcli limit setting error.
+013962 wwwUI response times optimization.
 011275 Use UPnP support from libtorrent.
 
 BTG version 0.9.8
