--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -4,9 +4,11 @@ The following bugs were fixed:
 
 015375 Wrong per-file progress info when several files are selected
 015216 Merge btgui patches from mkbosmans.
+015185 btgncli, broken handling of updates.
 015087 Add Arch Linux package to listing.
 015074 context.peers does not work with "for all contexts" flag set.
 015068 Crash when reading faulty IP filter range.
+015049 Update Openwrt build.
 015048 btgvs, add lirc support and freevo integration.
 	
 BTG version 0.9.9
