--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,6 +2,7 @@ BTG version 1.0.0
 -----------------
 The following bugs were fixed:
 
+015571 Merge wwwui patch from gH0StArthour (Hungarian translation).
 015375 Wrong per-file progress info when several files are selected
 015216 Merge btgui patches from mkbosmans.
 015185 btgncli, broken handling of updates.
