--- a/branches/2.x-branch/ChangeLog
+++ b/branches/2.x-branch/ChangeLog
@@ -1,3 +1,9 @@
+BTG version 2.0.0
+-----------------
+The following bugs were fixed:
+
+015985 Merge patches from volkmar.
+
 BTG version 1.0.0
 -----------------
 The following bugs were fixed:
