--- a/trunk/ChangeLog
+++ b/trunk/ChangeLog
@@ -2,8 +2,9 @@ BTG version 2.0.0
 -----------------
 The following bugs were fixed:
 
+016081 Two bugs in the www UI language files.
 015985 Merge patches from volkmar.
-016008 torrents are completely re-checked after restart
+016008 Torrents are completely re-checked after restart.
 
 BTG version 1.0.0
 -----------------
