--- a/trunk/AUTHORS
+++ b/trunk/AUTHORS
@@ -2,5 +2,6 @@ Michael Wojciechowski.
 Johan Ström (XML-RPC transport and externalization, WWW UI, session saving, porting).
 Roman Rybalko (making btgui look pretty, countless bugfixes, packaging).
 Gabor Tanka (DHT fixes).
+Lajos Boróczki (Openwrt patch).
 Ghostarthour (Hungarian translation).
 Jesper Nyholm Jensen (Misc).
